--- a/UserlikeDemo-Info.plist
+++ b/UserlikeDemo-Info.plist
@@ -16,7 +16,7 @@
 		<string>Icon@2x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.userlike.clientdemo</string>
+	<string>com.userlike.demo</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
